--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
+* {
+	padding: 0;
+	margin: 0;
+}
+
 .App {
-  text-align: center;
+	padding: 2rem;
+	text-align: center;
+	background: #f0654c;
+	color: #fff;
+	height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input {
+	padding: 10px;
+	border-radius: 25px;
+	border-color: transparent;
+	margin: 20px 0;
+	width: 15%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button {
+	padding: 10px;
+	border-radius: 20px;
+	margin-left: 10px;
+	width: 5%;
+	border: transparent;
+	background: #fff;
+	color: #f0654c;
+	font-weight: bold;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.todo-container {
+	display: flex;
+	background: #fff;
+	color: #f0654c;
+	margin: 0 auto;
+	width: 35%;
+	padding: 8px 40px 8px 20px;
+	border-radius: 25px;
+	margin-bottom: 20px;
+	align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todo {
+	flex: 1;
+	text-align: left;
 }
